<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Les Mangeurs du Rouleau</string>
    <string name="cancel_reply_description">Annuler la réponse</string>
    <string name="attach_file_description">Joindre un fichier</string>
    <string name="message_input_hint">Votre message...</string>
    <string name="send_message_description">Envoyer le message</string>
    <string name="fill_all_fields">Veuillez remplir tous les champs.</string>
    <string name="unknown_error">Une erreur inconnue est survenue.</string>
    <string name="cancel">Annuler</string>
    <string name="error_reading_image_file">Erreur lors de la lecture du fichier image</string>
    <string name="download_for_offline_reading">Télécharger pour lire hors-ligne</string>
    <string name="na">N/A</string>
    <string name="quick_reactions">Réactions rapides</string>
    <string name="mutual_contacts_title">Contacts en commun</string>
    <string name="new_group">Nouveau groupe</string>
    <string name="emoji_reaction">Réaction Emoji</string>
    <string name="more_options">Plus d\'options</string>
    <string name="search">Rechercher</string>
    <string name="action_forward">Transférer</string>
    <string name="action_add_to_library">Ajouter à ma bibliothèque</string>
    <string name="action_mark_unread">Marquer comme non lu</string>
    <string name="browse_club_members">Parcourir les membres du club</string>
    <string name="status_online">En ligne</string>
    <string name="new_conversation_title">Nouvelle discussion</string>
    <string name="search_contact_hint">Rechercher un contact</string>
    <string name="followed">Suivi</string>
    <string name="no_mutual_contacts_found">Aucun contact en commun trouvé</string>
    <string name="new_conversation_description">Nouvelle conversation</string>
    <plurals name="books_read_count_format">
        <item quantity="one">%d Livre lu</item>
        <item quantity="other">%d Livres lus</item>
    </plurals>
    <string name="author_label">Auteur :</string>
    <string name="synopsis_label">Synopsis</string>
    <string name="read_the_book">Lire le livre</string>
    <string name="in_my_library">Dans ma bibliothèque</string>
    <string name="no_search_results">Aucune lecture ne correspond à vos critères.</string>
    <string name="title_crop_image">Recadrer l\'image</string>
    <string name="comment_hidden_placeholder">Ce commentaire est masqué.</string>
    <string name="action_unhide">Afficher</string>
    <string name="action_show_comments">Afficher les commentaires</string>
    <string name="fab_edit_cover_description">Modifier la photo de couverture</string>
    <string name="cover_photo_updated_success">Photo de couverture mise à jour avec succès</string>
    <string name="error_updating_cover_photo">Échec de la mise à jour de la photo de couverture</string>
    <string name="error_cropping_image">Une erreur est survenue lors du recadrage de l’image.</string>
    <string name="view_my_library_button">Voir ma bibliothèque</string>
    <string name="search_readings_hint">Rechercher par titre, auteur, mois...</string>
    <string name="my_library_title">Ma Bibliothèque</string>
    <string name="my_library_empty">Votre bibliothèque est vide. Ajoutez des livres pour commencer !</string>
    <string name="action_favorite">Marquer comme favori</string>
    <string name="action_history">Voir l\'historique</string>
    <string name="action_mark_as_read">Marquer comme lu</string>
    <string name="action_collections">Ajouter à une collection</string>
    <string name="action_more_options">Plus d\'options</string>
    <string name="completed_on_date">Terminé le %1$s</string>
    <string name="profile_cover_image_description">Image de couverture du profil</string>
    <string name="action_message">Message</string>
    <string name="section_title_about">À Propos</string>
    <string name="section_title_affinity_partner">Partenaire d\'Affinité</string>
    <string name="section_title_recent_library">Sur son étagère</string>
    <string name="section_title_recent_activity">Activité Récente</string>
    <string name="action_like">J\'aime</string>
    <string name="action_comment">Commenter</string>
    <string name="join_meeting_button">Rejoindre</string>
    <string name="social_feedback_template_single">❤️ %1$s personne</string>
    <string name="social_feedback_template_multiple">❤️ %1$d personnes</string>
    <string name="social_feedback_template_user_and_others">❤️ Vous et %1$d autres</string>
    <string name="post_subtitle_template">a défini la lecture de %1$s</string>
    <string name="club_avatar_description">Avatar du club Les Mangeurs du Rouleau</string>
    <string name="animator_section_title">Mot de l\'Animateur</string>
    <string name="agenda_section_title">Nos Rendez-vous</string>
    <string name="likes_count_template">❤️ %1$d Appréciations</string>
    <string name="discuss_button_text"><![CDATA[💬 Discuter & Apprécier]]></string>
    <string name="phase_icon_description">Icône de la phase</string>
    <string name="join_button_text">Rejoindre</string>
    <string name="dictionary_title">Rechercher dans le dictionnaire</string>
    <string name="streak_indicator_description">Indicateur de série de messages</string>
    <string name="strongest_affinity_title">Relations Fortes</string>
    <string name="strongest_affinity_score_format" formatted="false">🔥 Affinité maximale : %1$d points avec @%2$s</string>
    <string name="strongest_affinity_tier_format" formatted="false">Niveau : %1$s</string>
    <string name="error_opening_link">Impossible d\'ouvrir le lien.</string>
    <string name="default_username">Utilisateur</string>
    <string name="error_generic_with_message">Erreur : %1$s</string>
    <string name="comment_like_button_description">Aimer ce commentaire</string>
    <string name="likes_count_default">0</string>
    <string name="full_screen_image_view">Image en plein écran</string>
    <string name="close_full_screen_image_view">Fermer la vue plein écran</string>
    <string name="download_image">Télécharger l\'image</string>
    <string name="user_avatar_description">Avatar de l\'utilisateur</string>
    <string name="heart_indicator_description">Indicateur d\'intensité relationnelle</string>
    <string name="login_title">Connexion</string>
    <string name="reset_password_title">Réinitialiser le mot de passe</string>
    <string name="login_successful">Connexion réussie : %1$s</string>
    <string name="login_failed">Erreur de connexion : %1$s</string>
    <string name="error_field_required">Ce champ est requis.</string>
    <string name="error_invalid_email">L\'adresse e-mail n\'est pas valide.</string>
    <string name="error_password_too_short">Le mot de passe doit contenir au moins 6 caractères.</string>
    <string name="error_passwords_do_not_match">Les mots de passe ne correspondent pas.</string>
    <string name="registration_successful_check_email">Inscription réussie ! Un e-mail de vérification a été envoyé à %1$s. Veuillez consulter votre boîte de réception pour activer votre compte.</string>
    <string name="registration_failed">Erreur d\'inscription : %1$s</string>
    <string name="email_not_verified_message_login_prompt">Votre adresse e-mail n\'est pas vérifiée. Veuillez consulter votre boîte de réception (et vos spams) pour l\'e-mail de vérification. Vous devez vérifier votre e-mail avant de pouvoir vous connecter.</string>
    <string name="password_reset_email_sent_success">Un e-mail de réinitialisation a été envoyé (si le compte existe).</string>
    <string name="password_reset_failed_generic_format">La réinitialisation du mot de passe a échoué : %1$s</string>
    <string name="email_required_for_reset">L\'adresse e-mail est requise.</string>
    <string name="default_web_client_id" translatable="false">699742629224-klvetg97ecmbfuiprl12vqhrlife0lon.apps.googleusercontent.com</string>
    <string name="error_google_token_null">Erreur Google : Le token d\'identification n\'a pas été reçu.</string>
    <string name="error_google_signin_failed_api">La connexion avec Google a échoué (code : %1$s).</string>
    <string name="error_google_signin_failed">La connexion avec Google a échoué.</string>
    <string name="typing_indicator">est en train d’écrire...</string>
    <string name="action_favorite_title">Favori</string>
    <string name="link_account_title">Lier le compte Google</string>
    <string name="link_account_message">Un compte existe déjà avec l\'adresse e-mail %1$s. Voulez-vous lier votre compte Google à ce compte existant ? Veuillez saisir le mot de passe de votre compte existant.</string>
    <string name="password_hint_for_linking">Mot de passe du compte existant</string>
    <string name="link_button_text">Lier</string>
    <string name="password_required_for_linking">Le mot de passe est requis pour lier les comptes.</string>
    <string name="linking_cancelled">Liaison de compte annulée.</string>
    <string name="firebase_error_invalid_custom_token">Le token personnalisé est invalide.</string>
    <string name="firebase_error_custom_token_mismatch">Le token personnalisé correspond à une autre audience.</string>
    <string name="firebase_error_invalid_credential">Les informations d\'identification fournies sont incorrectes ou ont expiré.</string>
    <string name="firebase_error_invalid_credential_generic">Les informations d\'identification sont invalides.</string>
    <string name="firebase_error_user_disabled">Ce compte utilisateur a été désactivé.</string>
    <string name="firebase_error_user_token_expired">La session utilisateur a expiré. Veuillez vous reconnecter.</string>
    <string name="firebase_error_user_not_found">Aucun utilisateur trouvé avec ces informations.</string>
    <string name="firebase_error_user_not_found_for_reset">Aucun compte n\'est associé à cette adresse e-mail.</string>
    <string name="firebase_error_invalid_user_token">Le token utilisateur est invalide. Veuillez vous reconnecter.</string>
    <string name="firebase_error_operation_not_allowed">Cette opération n\'est pas autorisée. Vérifiez les configurations de votre projet Firebase.</string>
    <string name="firebase_error_email_already_in_use">Cette adresse e-mail est déjà utilisée par un autre compte.</string>
    <string name="filter_all">Toutes</string>
    <string name="dialog_title_enter_secret_code">Entrez le code secret</string>
    <string name="secret_code_hint">Code secret</string>
    <string name="enter_code_button">Entrer</string>
    <string name="action_reply">Répondre</string>
    <string name="action_copy_text">Copier le texte</string>
    <string name="action_hide">Masquer</string>
    <string name="action_report">Signaler</string>
    <string name="action_delete">Supprimer</string>
    <string name="action_edit">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="copy">Copier</string>
    <string name="reaction_thumbs_up">Réaction pouce en l\'air</string>
    <string name="reaction_heart">Réaction coeur</string>
    <string name="reaction_laughing">Réaction rire</string>
    <string name="reaction_wow">Réaction surpris</string>
    <string name="reaction_sad">Réaction triste</string>
    <string name="edit">Modifier</string>
    <string name="filter_groups">Groupes</string>
    <string name="filter_archived">Archivées</string>
    <string name="action_archive">Archiver</string>
    <string name="action_pin">Épingler</string>
    <string name="filter_pinned">Épinglées</string>
    <string name="action_share">Partager</string>
    <string name="messages_title">Messagerie</string>
    <string name="search_conversation_hint">Rechercher une conversation...</string>
    <string name="filter_unread">Non lues</string>
    <string name="filter_favorites">Favoris</string>
    <string name="no_conversations_yet">Aucune conversation pour le moment.</string>
</resources>