<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Actions spécifiques à l'auteur du commentaire -->
    <item
        android:id="@+id/action_edit_comment"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_edit_outline" />

    <item
        android:id="@+id/action_delete_comment"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete_outline" />


    <!-- Actions spécifiques à un "invité" (non-auteur) -->
    <item
        android:id="@+id/action_report_comment"
        android:title="@string/action_report"
        android:icon="@drawable/ic_report" />

    <item
        android:id="@+id/action_hide_comment"
        android:title="@string/action_hide"
        android:icon="@drawable/ic_visibility_off" />


    <!-- Actions communes à tous les utilisateurs -->
    <item
        android:id="@+id/action_reply_to_comment"
        android:title="@string/action_reply"
        android:icon="@drawable/ic_reply" />

    <item
        android:id="@+id/action_copy_comment_text"
        android:title="@string/action_copy_text"
        android:icon="@drawable/ic_copy" />

    <item
        android:id="@+id/action_share_comment"
        android:title="@string/action_share"
        android:icon="@drawable/ic_share" />

</menu>