<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- === DÉBUT DE LA CORRECTION : Affichage forcé des icônes === -->
    <item
        android:id="@+id/action_pin"
        android:icon="@drawable/ic_pin"
        android:title="@string/action_pin"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_deletee"
        android:title="@string/delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/ic_archive"
        android:title="@string/action_archive"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_star"
        android:title="@string/action_favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_vert"
        android:title="@string/more_options"
        app:showAsAction="ifRoom" />
    <!-- === FIN DE LA CORRECTION === -->

</menu>